dragon/chap3/example/bison/sql/y.output
Rules useless in parser due to conflicts

  231 cursor_def: DECLARE cursor CURSOR FOR query_exp opt_order_by_clause


State 46 conflicts: 4 shift/reduce
State 57 conflicts: 1 shift/reduce
State 64 conflicts: 3 shift/reduce
State 65 conflicts: 3 shift/reduce
State 70 conflicts: 3 shift/reduce
State 79 conflicts: 36 reduce/reduce
State 90 conflicts: 4 shift/reduce
State 108 conflicts: 4 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 3 shift/reduce
State 112 conflicts: 3 shift/reduce
State 113 conflicts: 3 shift/reduce
State 114 conflicts: 3 shift/reduce
State 115 conflicts: 3 shift/reduce
State 138 conflicts: 4 shift/reduce
State 141 conflicts: 4 shift/reduce, 1 reduce/reduce
State 153 conflicts: 1 shift/reduce
State 162 conflicts: 3 shift/reduce
State 173 conflicts: 4 shift/reduce
State 176 conflicts: 3 shift/reduce
State 189 conflicts: 4 shift/reduce
State 193 conflicts: 3 reduce/reduce
State 200 conflicts: 4 shift/reduce
State 201 conflicts: 4 shift/reduce
State 203 conflicts: 3 shift/reduce
State 204 conflicts: 3 shift/reduce
State 206 conflicts: 1 shift/reduce
State 211 conflicts: 1 shift/reduce
State 242 conflicts: 3 shift/reduce
State 244 conflicts: 1 shift/reduce
State 248 conflicts: 3 shift/reduce
State 253 conflicts: 1 shift/reduce
State 271 conflicts: 4 shift/reduce
State 284 conflicts: 4 shift/reduce
State 286 conflicts: 1 shift/reduce
State 289 conflicts: 3 shift/reduce
State 293 conflicts: 1 shift/reduce
State 297 conflicts: 1 shift/reduce
State 324 conflicts: 3 shift/reduce
State 330 conflicts: 1 shift/reduce
State 339 conflicts: 4 shift/reduce
State 420 conflicts: 4 shift/reduce
State 446 conflicts: 4 shift/reduce


Grammar

    0 $accept: sql_list $end

    1 sql_list: sql ';'
    2         | sql_list sql ';'

    3 sql: schema

    4 schema: CREATE SCHEMA AUTHORIZATION user opt_schema_element_list

    5 opt_schema_element_list: ε
    6                        | schema_element_list

    7 schema_element_list: schema_element
    8                    | schema_element_list schema_element

    9 schema_element: base_table_def
   10               | view_def
   11               | privilege_def

   12 base_table_def: CREATE TABLE table '(' base_table_element_commalist ')'

   13 base_table_element_commalist: base_table_element
   14                             | base_table_element_commalist ',' base_table_element

   15 base_table_element: column_def
   16                   | table_constraint_def

   17 column_def: column data_type column_def_opt_list

   18 column_def_opt_list: ε
   19                    | column_def_opt_list column_def_opt

   20 column_def_opt: NOT NULLX
   21               | NOT NULLX UNIQUE
   22               | NOT NULLX PRIMARY KEY
   23               | DEFAULT literal
   24               | DEFAULT NULLX
   25               | DEFAULT USER
   26               | CHECK '(' search_condition ')'
   27               | REFERENCES table
   28               | REFERENCES table '(' column_commalist ')'

   29 table_constraint_def: UNIQUE '(' column_commalist ')'
   30                     | PRIMARY KEY '(' column_commalist ')'
   31                     | FOREIGN KEY '(' column_commalist ')' REFERENCES table
   32                     | FOREIGN KEY '(' column_commalist ')' REFERENCES table '(' column_commalist ')' CHECK '(' search_condition ')'

   33 column_commalist: column
   34                 | column_commalist ',' column

   35 view_def: CREATE VIEW table opt_column_commalist AS query_spec opt_with_check_option

   36 opt_with_check_option: ε
   37                      | WITH CHECK OPTION

   38 opt_column_commalist: ε
   39                     | '(' column_commalist ')'

   40 privilege_def: GRANT privileges ON table TO grantee_commalist opt_with_grant_option

   41 opt_with_grant_option: ε
   42                      | WITH GRANT OPTION

   43 privileges: ALL PRIVILEGES
   44           | ALL
   45           | operation_commalist

   46 operation_commalist: operation
   47                    | operation_commalist ',' operation

   48 operation: SELECT
   49          | INSERT
   50          | DELETE
   51          | UPDATE opt_column_commalist
   52          | REFERENCES opt_column_commalist

   53 grantee_commalist: grantee
   54                  | grantee_commalist ',' grantee

   55 grantee: PUBLIC
   56        | user

   57 sql: cursor_def

   58 cursor_def: DECLARE cursor CURSOR FOR query_exp opt_order_by_clause

   59 opt_order_by_clause: ε
   60                    | ORDER BY ordering_spec_commalist

   61 ordering_spec_commalist: ordering_spec
   62                        | ordering_spec_commalist ',' ordering_spec

   63 ordering_spec: INTNUM opt_asc_desc
   64              | column_ref opt_asc_desc

   65 opt_asc_desc: ε
   66             | ASC
   67             | DESC

   68 sql: manipulative_statement

   69 manipulative_statement: close_statement
   70                       | commit_statement
   71                       | delete_statement_positioned
   72                       | delete_statement_searched
   73                       | fetch_statement
   74                       | insert_statement
   75                       | open_statement
   76                       | rollback_statement
   77                       | select_statement
   78                       | update_statement_positioned
   79                       | update_statement_searched

   80 close_statement: CLOSE cursor

   81 commit_statement: COMMIT WORK

   82 delete_statement_positioned: DELETE FROM table WHERE CURRENT OF cursor

   83 delete_statement_searched: DELETE FROM table opt_where_clause

   84 fetch_statement: FETCH cursor INTO target_commalist

   85 insert_statement: INSERT INTO table opt_column_commalist values_or_query_spec

   86 values_or_query_spec: VALUES '(' insert_atom_commalist ')'
   87                     | query_spec

   88 insert_atom_commalist: insert_atom
   89                      | insert_atom_commalist ',' insert_atom

   90 insert_atom: atom
   91            | NULLX

   92 open_statement: OPEN cursor

   93 rollback_statement: ROLLBACK WORK

   94 select_statement: SELECT opt_all_distinct selection INTO target_commalist table_exp

   95 opt_all_distinct: ε
   96                 | ALL
   97                 | DISTINCT

   98 update_statement_positioned: UPDATE table SET assignment_commalist WHERE CURRENT OF cursor

   99 assignment_commalist: ε
  100                     | assignment
  101                     | assignment_commalist ',' assignment

  102 assignment: column '=' scalar_exp
  103           | column '=' NULLX

  104 update_statement_searched: UPDATE table SET assignment_commalist opt_where_clause

  105 target_commalist: target
  106                 | target_commalist ',' target

  107 target: parameter_ref

  108 opt_where_clause: ε
  109                 | where_clause

  110 query_exp: query_term
  111          | query_exp UNION query_term
  112          | query_exp UNION ALL query_term

  113 query_term: query_spec
  114           | '(' query_exp ')'

  115 query_spec: SELECT opt_all_distinct selection table_exp

  116 selection: scalar_exp_commalist
  117          | '*'

  118 table_exp: from_clause opt_where_clause opt_group_by_clause opt_having_clause

  119 from_clause: FROM table_ref_commalist

  120 table_ref_commalist: table_ref
  121                    | table_ref_commalist ',' table_ref

  122 table_ref: table
  123          | table range_variable

  124 where_clause: WHERE search_condition

  125 opt_group_by_clause: ε
  126                    | GROUP BY column_ref_commalist

  127 column_ref_commalist: column_ref
  128                     | column_ref_commalist ',' column_ref

  129 opt_having_clause: ε
  130                  | HAVING search_condition

  131 search_condition: ε
  132                 | search_condition OR search_condition
  133                 | search_condition AND search_condition
  134                 | NOT search_condition
  135                 | '(' search_condition ')'
  136                 | predicate

  137 predicate: comparison_predicate
  138          | between_predicate
  139          | like_predicate
  140          | test_for_null
  141          | in_predicate
  142          | all_or_any_predicate
  143          | existence_test

  144 comparison_predicate: scalar_exp COMPARISON scalar_exp
  145                     | scalar_exp COMPARISON subquery

  146 between_predicate: scalar_exp NOT BETWEEN scalar_exp AND scalar_exp
  147                  | scalar_exp BETWEEN scalar_exp AND scalar_exp

  148 like_predicate: scalar_exp NOT LIKE atom opt_escape
  149               | scalar_exp LIKE atom opt_escape

  150 opt_escape: ε
  151           | ESCAPE atom

  152 test_for_null: column_ref IS NOT NULLX
  153              | column_ref IS NULLX

  154 in_predicate: scalar_exp NOT IN '(' subquery ')'
  155             | scalar_exp IN '(' subquery ')'
  156             | scalar_exp NOT IN '(' atom_commalist ')'
  157             | scalar_exp IN '(' atom_commalist ')'

  158 atom_commalist: atom
  159               | atom_commalist ',' atom

  160 all_or_any_predicate: scalar_exp COMPARISON any_all_some subquery

  161 any_all_some: ANY
  162             | ALL
  163             | SOME

  164 existence_test: EXISTS subquery

  165 subquery: '(' SELECT opt_all_distinct selection table_exp ')'

  166 scalar_exp: scalar_exp '+' scalar_exp
  167           | scalar_exp '-' scalar_exp
  168           | scalar_exp '*' scalar_exp
  169           | scalar_exp '/' scalar_exp
  170           | '+' scalar_exp
  171           | '-' scalar_exp
  172           | atom
  173           | column_ref
  174           | function_ref
  175           | '(' scalar_exp ')'

  176 scalar_exp_commalist: scalar_exp
  177                     | scalar_exp_commalist ',' scalar_exp

  178 atom: parameter_ref
  179     | literal
  180     | USER

  181 parameter_ref: parameter
  182              | parameter parameter
  183              | parameter INDICATOR parameter

  184 function_ref: AMMSC '(' '*' ')'
  185             | AMMSC '(' DISTINCT column_ref ')'
  186             | AMMSC '(' ALL scalar_exp ')'
  187             | AMMSC '(' scalar_exp ')'

  188 literal: STRING
  189        | INTNUM
  190        | APPROXNUM

  191 table: NAME
  192      | NAME '.' NAME

  193 column_ref: NAME
  194           | NAME '.' NAME
  195           | NAME '.' NAME '.' NAME

  196 data_type: CHARACTER
  197          | CHARACTER '(' INTNUM ')'
  198          | NUMERIC
  199          | NUMERIC '(' INTNUM ')'
  200          | NUMERIC '(' INTNUM ',' INTNUM ')'
  201          | DECIMAL
  202          | DECIMAL '(' INTNUM ')'
  203          | DECIMAL '(' INTNUM ',' INTNUM ')'
  204          | INTEGER
  205          | SMALLINT
  206          | FLOAT
  207          | FLOAT '(' INTNUM ')'
  208          | REAL
  209          | DOUBLE PRECISION

  210 column: NAME

  211 cursor: NAME

  212 parameter: ε
  213          | PARAMETER

  214 range_variable: NAME

  215 user: NAME

  216 sql: module_def

  217 module_def: MODULE opt_module LANGUAGE lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

  218 opt_module: ε
  219           | module

  220 module: NAME

  221 lang: COBOL
  222     | FORTRAN
  223     | PASCAL
  224     | PLI
  225     | C
  226     | ADA

  227 opt_cursor_def_list: ε
  228                    | cursor_def_list

  229 cursor_def_list: cursor_def
  230                | cursor_def_list cursor_def

  231 cursor_def: DECLARE cursor CURSOR FOR query_exp opt_order_by_clause

  232 procedure_def_list: procedure_def
  233                   | procedure_def_list procedure_def

  234 procedure_def: PROCEDURE procedure parameter_def_list ';' manipulative_statement_list

  235 procedure: NAME

  236 parameter_def_list: parameter_def
  237                   | parameter_def_list parameter_def

  238 parameter_def: parameter data_type
  239              | SQLCODE

  240 manipulative_statement_list: manipulative_statement
  241                            | manipulative_statement_list manipulative_statement

  242 sql: WHENEVER NOT FOUND when_action
  243    | WHENEVER SQLERROR when_action

  244 when_action: GOTO NAME
  245            | CONTINUE


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 26 28 29 30 31 32 39 86 114 135 154 155 156 157 165 175 184 185 186 187 197 199 200 202 203 207
    ')' (41) 12 26 28 29 30 31 32 39 86 114 135 154 155 156 157 165 175 184 185 186 187 197 199 200 202 203 207
    '*' (42) 117 168 184
    '+' (43) 166 170
    ',' (44) 14 34 47 54 62 89 101 106 121 128 159 177 200 203
    '-' (45) 167 171
    '.' (46) 192 194 195
    '/' (47) 169
    ';' (59) 1 2 234
    '=' (61) 102 103
    error (256)
    NAME (258) 191 192 193 194 195 210 211 214 215 220 235 244
    STRING (259) 188
    INTNUM (260) 63 189 197 199 200 202 203 207
    APPROXNUM (261) 190
    OR (262) 132
    AND (263) 133 146 147
    NOT (264) 20 21 22 134 146 148 152 154 156 242
    COMPARISON <subtok> (265) 144 145 160
    UMINUS (266)
    ALL (267) 43 44 96 112 162 186
    AMMSC (268) 184 185 186 187
    ANY (269) 161
    AS (270) 35
    ASC (271) 66
    AUTHORIZATION (272) 4 217
    BETWEEN (273) 146 147
    BY (274) 60 126
    CHARACTER (275) 196 197
    CHECK (276) 26 32 37
    CLOSE (277) 80
    COMMIT (278) 81
    CONTINUE (279) 245
    CREATE (280) 4 12 35
    CURRENT (281) 82 98
    CURSOR (282) 58 231
    DECIMAL (283) 201 202 203
    DECLARE (284) 58 231
    DEFAULT (285) 23 24 25
    DELETE (286) 50 82 83
    DESC (287) 67
    DISTINCT (288) 97 185
    DOUBLE (289) 209
    ESCAPE (290) 151
    EXISTS (291) 164
    FETCH (292) 84
    FLOAT (293) 206 207
    FOR (294) 58 231
    FOREIGN (295) 31 32
    FOUND (296) 242
    FROM (297) 82 83 119
    GOTO (298) 244
    GRANT (299) 40 42
    GROUP (300) 126
    HAVING (301) 130
    IN (302) 154 155 156 157
    INDICATOR (303) 183
    INSERT (304) 49 85
    INTEGER (305) 204
    INTO (306) 84 85 94
    IS (307) 152 153
    KEY (308) 22 30 31 32
    LANGUAGE (309) 217
    LIKE (310) 148 149
    MODULE (311) 217
    NULLX (312) 20 21 22 24 91 103 152 153
    NUMERIC (313) 198 199 200
    OF (314) 82 98
    ON (315) 40
    OPEN (316) 92
    OPTION (317) 37 42
    ORDER (318) 60
    PARAMETER (319) 213
    PRECISION (320) 209
    PRIMARY (321) 22 30
    PRIVILEGES (322) 43
    PROCEDURE (323) 234
    PUBLIC (324) 55
    REAL (325) 208
    REFERENCES (326) 27 28 31 32 52
    ROLLBACK (327) 93
    SCHEMA (328) 4
    SELECT (329) 48 94 115 165
    SET (330) 98 104
    SMALLINT (331) 205
    SOME (332) 163
    SQLCODE (333) 239
    SQLERROR (334) 243
    TABLE (335) 12
    TO (336) 40
    UNION (337) 111 112
    UNIQUE (338) 21 29
    UPDATE (339) 51 98 104
    USER (340) 25 180
    VALUES (341) 86
    VIEW (342) 35
    WHENEVER (343) 242 243
    WHERE (344) 82 98 124
    WITH (345) 37 42
    WORK (346) 81 93
    COBOL (347) 221
    FORTRAN (348) 222
    PASCAL (349) 223
    PLI (350) 224
    C (351) 225
    ADA (352) 226


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    sql_list (109)
        on left: 1 2
        on right: 0 2
    sql (110)
        on left: 3 57 68 216 242 243
        on right: 1 2
    schema (111)
        on left: 4
        on right: 3
    opt_schema_element_list (112)
        on left: 5 6
        on right: 4
    schema_element_list (113)
        on left: 7 8
        on right: 6 8
    schema_element (114)
        on left: 9 10 11
        on right: 7 8
    base_table_def (115)
        on left: 12
        on right: 9
    base_table_element_commalist (116)
        on left: 13 14
        on right: 12 14
    base_table_element (117)
        on left: 15 16
        on right: 13 14
    column_def (118)
        on left: 17
        on right: 15
    column_def_opt_list (119)
        on left: 18 19
        on right: 17 19
    column_def_opt (120)
        on left: 20 21 22 23 24 25 26 27 28
        on right: 19
    table_constraint_def (121)
        on left: 29 30 31 32
        on right: 16
    column_commalist (122)
        on left: 33 34
        on right: 28 29 30 31 32 34 39
    view_def (123)
        on left: 35
        on right: 10
    opt_with_check_option (124)
        on left: 36 37
        on right: 35
    opt_column_commalist (125)
        on left: 38 39
        on right: 35 51 52 85
    privilege_def (126)
        on left: 40
        on right: 11
    opt_with_grant_option (127)
        on left: 41 42
        on right: 40
    privileges (128)
        on left: 43 44 45
        on right: 40
    operation_commalist (129)
        on left: 46 47
        on right: 45 47
    operation (130)
        on left: 48 49 50 51 52
        on right: 46 47
    grantee_commalist (131)
        on left: 53 54
        on right: 40 54
    grantee (132)
        on left: 55 56
        on right: 53 54
    cursor_def (133)
        on left: 58 231
        on right: 57 229 230
    opt_order_by_clause (134)
        on left: 59 60
        on right: 58 231
    ordering_spec_commalist (135)
        on left: 61 62
        on right: 60 62
    ordering_spec (136)
        on left: 63 64
        on right: 61 62
    opt_asc_desc (137)
        on left: 65 66 67
        on right: 63 64
    manipulative_statement (138)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68 240 241
    close_statement (139)
        on left: 80
        on right: 69
    commit_statement (140)
        on left: 81
        on right: 70
    delete_statement_positioned (141)
        on left: 82
        on right: 71
    delete_statement_searched (142)
        on left: 83
        on right: 72
    fetch_statement (143)
        on left: 84
        on right: 73
    insert_statement (144)
        on left: 85
        on right: 74
    values_or_query_spec (145)
        on left: 86 87
        on right: 85
    insert_atom_commalist (146)
        on left: 88 89
        on right: 86 89
    insert_atom (147)
        on left: 90 91
        on right: 88 89
    open_statement (148)
        on left: 92
        on right: 75
    rollback_statement (149)
        on left: 93
        on right: 76
    select_statement (150)
        on left: 94
        on right: 77
    opt_all_distinct (151)
        on left: 95 96 97
        on right: 94 115 165
    update_statement_positioned (152)
        on left: 98
        on right: 78
    assignment_commalist (153)
        on left: 99 100 101
        on right: 98 101 104
    assignment (154)
        on left: 102 103
        on right: 100 101
    update_statement_searched (155)
        on left: 104
        on right: 79
    target_commalist (156)
        on left: 105 106
        on right: 84 94 106
    target (157)
        on left: 107
        on right: 105 106
    opt_where_clause (158)
        on left: 108 109
        on right: 83 104 118
    query_exp (159)
        on left: 110 111 112
        on right: 58 111 112 114 231
    query_term (160)
        on left: 113 114
        on right: 110 111 112
    query_spec (161)
        on left: 115
        on right: 35 87 113
    selection (162)
        on left: 116 117
        on right: 94 115 165
    table_exp (163)
        on left: 118
        on right: 94 115 165
    from_clause (164)
        on left: 119
        on right: 118
    table_ref_commalist (165)
        on left: 120 121
        on right: 119 121
    table_ref (166)
        on left: 122 123
        on right: 120 121
    where_clause (167)
        on left: 124
        on right: 109
    opt_group_by_clause (168)
        on left: 125 126
        on right: 118
    column_ref_commalist (169)
        on left: 127 128
        on right: 126 128
    opt_having_clause (170)
        on left: 129 130
        on right: 118
    search_condition (171)
        on left: 131 132 133 134 135 136
        on right: 26 32 124 130 132 133 134 135
    predicate (172)
        on left: 137 138 139 140 141 142 143
        on right: 136
    comparison_predicate (173)
        on left: 144 145
        on right: 137
    between_predicate (174)
        on left: 146 147
        on right: 138
    like_predicate (175)
        on left: 148 149
        on right: 139
    opt_escape (176)
        on left: 150 151
        on right: 148 149
    test_for_null (177)
        on left: 152 153
        on right: 140
    in_predicate (178)
        on left: 154 155 156 157
        on right: 141
    atom_commalist (179)
        on left: 158 159
        on right: 156 157 159
    all_or_any_predicate (180)
        on left: 160
        on right: 142
    any_all_some (181)
        on left: 161 162 163
        on right: 160
    existence_test (182)
        on left: 164
        on right: 143
    subquery (183)
        on left: 165
        on right: 145 154 155 160 164
    scalar_exp (184)
        on left: 166 167 168 169 170 171 172 173 174 175
        on right: 102 144 145 146 147 148 149 154 155 156 157 160 166 167 168 169 170 171 175 176 177 186 187
    scalar_exp_commalist (185)
        on left: 176 177
        on right: 116 177
    atom (186)
        on left: 178 179 180
        on right: 90 148 149 151 158 159 172
    parameter_ref (187)
        on left: 181 182 183
        on right: 107 178
    function_ref (188)
        on left: 184 185 186 187
        on right: 174
    literal (189)
        on left: 188 189 190
        on right: 23 179
    table (190)
        on left: 191 192
        on right: 12 27 28 31 32 35 40 82 83 85 98 104 122 123
    column_ref (191)
        on left: 193 194 195
        on right: 64 127 128 152 153 173 185
    data_type (192)
        on left: 196 197 198 199 200 201 202 203 204 205 206 207 208 209
        on right: 17 238
    column (193)
        on left: 210
        on right: 17 33 34 102 103
    cursor (194)
        on left: 211
        on right: 58 80 82 84 92 98 231
    parameter (195)
        on left: 212 213
        on right: 181 182 183 238
    range_variable (196)
        on left: 214
        on right: 123
    user (197)
        on left: 215
        on right: 4 56 217
    module_def (198)
        on left: 217
        on right: 216
    opt_module (199)
        on left: 218 219
        on right: 217
    module (200)
        on left: 220
        on right: 219
    lang (201)
        on left: 221 222 223 224 225 226
        on right: 217
    opt_cursor_def_list (202)
        on left: 227 228
        on right: 217
    cursor_def_list (203)
        on left: 229 230
        on right: 228 230
    procedure_def_list (204)
        on left: 232 233
        on right: 217 233
    procedure_def (205)
        on left: 234
        on right: 232 233
    procedure (206)
        on left: 235
        on right: 234
    parameter_def_list (207)
        on left: 236 237
        on right: 234 237
    parameter_def (208)
        on left: 238 239
        on right: 236 237
    manipulative_statement_list (209)
        on left: 240 241
        on right: 234 241
    when_action (210)
        on left: 244 245
        on right: 242 243


State 0

    0 $accept: • sql_list $end

    CLOSE     shift, and go to state 1
    COMMIT    shift, and go to state 2
    CREATE    shift, and go to state 3
    DECLARE   shift, and go to state 4
    DELETE    shift, and go to state 5
    FETCH     shift, and go to state 6
    INSERT    shift, and go to state 7
    MODULE    shift, and go to state 8
    OPEN      shift, and go to state 9
    ROLLBACK  shift, and go to state 10
    SELECT    shift, and go to state 11
    UPDATE    shift, and go to state 12
    WHENEVER  shift, and go to state 13

    sql_list                     go to state 14
    sql                          go to state 15
    schema                       go to state 16
    cursor_def                   go to state 17
    manipulative_statement       go to state 18
    close_statement              go to state 19
    commit_statement             go to state 20
    delete_statement_positioned  go to state 21
    delete_statement_searched    go to state 22
    fetch_statement              go to state 23
    insert_statement             go to state 24
    open_statement               go to state 25
    rollback_statement           go to state 26
    select_statement             go to state 27
    update_statement_positioned  go to state 28
    update_statement_searched    go to state 29
    module_def                   go to state 30


State 1

   80 close_statement: CLOSE • cursor

    NAME  shift, and go to state 31

    cursor  go to state 32


State 2

   81 commit_statement: COMMIT • WORK

    WORK  shift, and go to state 33


State 3

    4 schema: CREATE • SCHEMA AUTHORIZATION user opt_schema_element_list

    SCHEMA  shift, and go to state 34


State 4

   58 cursor_def: DECLARE • cursor CURSOR FOR query_exp opt_order_by_clause
  231           | DECLARE • cursor CURSOR FOR query_exp opt_order_by_clause

    NAME  shift, and go to state 31

    cursor  go to state 35


State 5

   82 delete_statement_positioned: DELETE • FROM table WHERE CURRENT OF cursor
   83 delete_statement_searched: DELETE • FROM table opt_where_clause

    FROM  shift, and go to state 36


State 6

   84 fetch_statement: FETCH • cursor INTO target_commalist

    NAME  shift, and go to state 31

    cursor  go to state 37


State 7

   85 insert_statement: INSERT • INTO table opt_column_commalist values_or_query_spec

    INTO  shift, and go to state 38


State 8

  217 module_def: MODULE • opt_module LANGUAGE lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

    NAME  shift, and go to state 39

    $default  reduce using rule 218 (opt_module)

    opt_module  go to state 40
    module      go to state 41


State 9

   92 open_statement: OPEN • cursor

    NAME  shift, and go to state 31

    cursor  go to state 42


State 10

   93 rollback_statement: ROLLBACK • WORK

    WORK  shift, and go to state 43


State 11

   94 select_statement: SELECT • opt_all_distinct selection INTO target_commalist table_exp

    ALL       shift, and go to state 44
    DISTINCT  shift, and go to state 45

    $default  reduce using rule 95 (opt_all_distinct)

    opt_all_distinct  go to state 46


State 12

   98 update_statement_positioned: UPDATE • table SET assignment_commalist WHERE CURRENT OF cursor
  104 update_statement_searched: UPDATE • table SET assignment_commalist opt_where_clause

    NAME  shift, and go to state 47

    table  go to state 48


State 13

  242 sql: WHENEVER • NOT FOUND when_action
  243    | WHENEVER • SQLERROR when_action

    NOT       shift, and go to state 49
    SQLERROR  shift, and go to state 50


State 14

    0 $accept: sql_list • $end
    2 sql_list: sql_list • sql ';'

    $end      shift, and go to state 51
    CLOSE     shift, and go to state 1
    COMMIT    shift, and go to state 2
    CREATE    shift, and go to state 3
    DECLARE   shift, and go to state 4
    DELETE    shift, and go to state 5
    FETCH     shift, and go to state 6
    INSERT    shift, and go to state 7
    MODULE    shift, and go to state 8
    OPEN      shift, and go to state 9
    ROLLBACK  shift, and go to state 10
    SELECT    shift, and go to state 11
    UPDATE    shift, and go to state 12
    WHENEVER  shift, and go to state 13

    sql                          go to state 52
    schema                       go to state 16
    cursor_def                   go to state 17
    manipulative_statement       go to state 18
    close_statement              go to state 19
    commit_statement             go to state 20
    delete_statement_positioned  go to state 21
    delete_statement_searched    go to state 22
    fetch_statement              go to state 23
    insert_statement             go to state 24
    open_statement               go to state 25
    rollback_statement           go to state 26
    select_statement             go to state 27
    update_statement_positioned  go to state 28
    update_statement_searched    go to state 29
    module_def                   go to state 30


State 15

    1 sql_list: sql • ';'

    ';'  shift, and go to state 53


State 16

    3 sql: schema •

    $default  reduce using rule 3 (sql)


State 17

   57 sql: cursor_def •

    $default  reduce using rule 57 (sql)


State 18

   68 sql: manipulative_statement •

    $default  reduce using rule 68 (sql)


State 19

   69 manipulative_statement: close_statement •

    $default  reduce using rule 69 (manipulative_statement)


State 20

   70 manipulative_statement: commit_statement •

    $default  reduce using rule 70 (manipulative_statement)


State 21

   71 manipulative_statement: delete_statement_positioned •

    $default  reduce using rule 71 (manipulative_statement)


State 22

   72 manipulative_statement: delete_statement_searched •

    $default  reduce using rule 72 (manipulative_statement)


State 23

   73 manipulative_statement: fetch_statement •

    $default  reduce using rule 73 (manipulative_statement)


State 24

   74 manipulative_statement: insert_statement •

    $default  reduce using rule 74 (manipulative_statement)


State 25

   75 manipulative_statement: open_statement •

    $default  reduce using rule 75 (manipulative_statement)


State 26

   76 manipulative_statement: rollback_statement •

    $default  reduce using rule 76 (manipulative_statement)


State 27

   77 manipulative_statement: select_statement •

    $default  reduce using rule 77 (manipulative_statement)


State 28

   78 manipulative_statement: update_statement_positioned •

    $default  reduce using rule 78 (manipulative_statement)


State 29

   79 manipulative_statement: update_statement_searched •

    $default  reduce using rule 79 (manipulative_statement)


State 30

  216 sql: module_def •

    $default  reduce using rule 216 (sql)


State 31

  211 cursor: NAME •

    $default  reduce using rule 211 (cursor)


State 32

   80 close_statement: CLOSE cursor •

    $default  reduce using rule 80 (close_statement)


State 33

   81 commit_statement: COMMIT WORK •

    $default  reduce using rule 81 (commit_statement)


State 34

    4 schema: CREATE SCHEMA • AUTHORIZATION user opt_schema_element_list

    AUTHORIZATION  shift, and go to state 54


State 35

   58 cursor_def: DECLARE cursor • CURSOR FOR query_exp opt_order_by_clause
  231           | DECLARE cursor • CURSOR FOR query_exp opt_order_by_clause

    CURSOR  shift, and go to state 55


State 36

   82 delete_statement_positioned: DELETE FROM • table WHERE CURRENT OF cursor
   83 delete_statement_searched: DELETE FROM • table opt_where_clause

    NAME  shift, and go to state 47

    table  go to state 56


State 37

   84 fetch_statement: FETCH cursor • INTO target_commalist

    INTO  shift, and go to state 57


State 38

   85 insert_statement: INSERT INTO • table opt_column_commalist values_or_query_spec

    NAME  shift, and go to state 47

    table  go to state 58


State 39

  220 module: NAME •

    $default  reduce using rule 220 (module)


State 40

  217 module_def: MODULE opt_module • LANGUAGE lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

    LANGUAGE  shift, and go to state 59


State 41

  219 opt_module: module •

    $default  reduce using rule 219 (opt_module)


State 42

   92 open_statement: OPEN cursor •

    $default  reduce using rule 92 (open_statement)


State 43

   93 rollback_statement: ROLLBACK WORK •

    $default  reduce using rule 93 (rollback_statement)


State 44

   96 opt_all_distinct: ALL •

    $default  reduce using rule 96 (opt_all_distinct)


State 45

   97 opt_all_distinct: DISTINCT •

    $default  reduce using rule 97 (opt_all_distinct)


State 46

   94 select_statement: SELECT opt_all_distinct • selection INTO target_commalist table_exp

    NAME       shift, and go to state 60
    STRING     shift, and go to state 61
    INTNUM     shift, and go to state 62
    APPROXNUM  shift, and go to state 63
    '+'        shift, and go to state 64
    '-'        shift, and go to state 65
    '*'        shift, and go to state 66
    AMMSC      shift, and go to state 67
    PARAMETER  shift, and go to state 68
    USER       shift, and go to state 69
    '('        shift, and go to state 70

    '+'        [reduce using rule 212 (parameter)]
    '-'        [reduce using rule 212 (parameter)]
    '*'        [reduce using rule 212 (parameter)]
    PARAMETER  [reduce using rule 212 (parameter)]
    $default   reduce using rule 212 (parameter)

    selection             go to state 71
    scalar_exp            go to state 72
    scalar_exp_commalist  go to state 73
    atom                  go to state 74
    parameter_ref         go to state 75
    function_ref          go to state 76
    literal               go to state 77
    column_ref            go to state 78
    parameter             go to state 79


State 47

  191 table: NAME •
  192      | NAME • '.' NAME

    '.'  shift, and go to state 80

    $default  reduce using rule 191 (table)


State 48

   98 update_statement_positioned: UPDATE table • SET assignment_commalist WHERE CURRENT OF cursor
  104 update_statement_searched: UPDATE table • SET assignment_commalist opt_where_clause

    SET  shift, and go to state 81


State 49

  242 sql: WHENEVER NOT • FOUND when_action

    FOUND  shift, and go to state 82


State 50

  243 sql: WHENEVER SQLERROR • when_action

    CONTINUE  shift, and go to state 83
    GOTO      shift, and go to state 84

    when_action  go to state 85


State 51

    0 $accept: sql_list $end •

    $default  accept


State 52

    2 sql_list: sql_list sql • ';'

    ';'  shift, and go to state 86


State 53

    1 sql_list: sql ';' •

    $default  reduce using rule 1 (sql_list)


State 54

    4 schema: CREATE SCHEMA AUTHORIZATION • user opt_schema_element_list

    NAME  shift, and go to state 87

    user  go to state 88


State 55

   58 cursor_def: DECLARE cursor CURSOR • FOR query_exp opt_order_by_clause
  231           | DECLARE cursor CURSOR • FOR query_exp opt_order_by_clause

    FOR  shift, and go to state 89


State 56

   82 delete_statement_positioned: DELETE FROM table • WHERE CURRENT OF cursor
   83 delete_statement_searched: DELETE FROM table • opt_where_clause

    WHERE  shift, and go to state 90

    $default  reduce using rule 108 (opt_where_clause)

    opt_where_clause  go to state 91
    where_clause      go to state 92


State 57

   84 fetch_statement: FETCH cursor INTO • target_commalist

    PARAMETER  shift, and go to state 68

    PARAMETER  [reduce using rule 212 (parameter)]
    $default   reduce using rule 212 (parameter)

    target_commalist  go to state 93
    target            go to state 94
    parameter_ref     go to state 95
    parameter         go to state 79


State 58

   85 insert_statement: INSERT INTO table • opt_column_commalist values_or_query_spec

    '('  shift, and go to state 96

    $default  reduce using rule 38 (opt_column_commalist)

    opt_column_commalist  go to state 97


State 59

  217 module_def: MODULE opt_module LANGUAGE • lang AUTHORIZATION user opt_cursor_def_list procedure_def_list

    COBOL    shift, and go to state 98
    FORTRAN  shift, and go to state 99
    PASCAL   shift, and go to state 100
    PLI      shift, and go to state 101
    C        shift, and go to state 102
    ADA      shift, and go to state 103
